# ddos_javelin

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
src/: cli_parser.py  constants.py  run.py
src/attacks/: __init__.py  handler.py
src/attacks/http/: __init__.py  core.py  domain.py  services.py
src/attacks/tcp/: __init__.py  services.py  syn_flood.py
src/packets/: __init__.py  models.py
src/shared/: cli.py  collections.py  errors.py  files.py  packets.py  randoms.py  validators.py
src/shared/attacks/: __init__.py  core.py  http.py  models.py  services.py  targets.py
static/: referers.txt  user_agents.txt
