[tool.poetry]
name = "ddos_javelin"
version = "0.1.0"
description = ""
authors = ["Dmytro Parfeniuk <parfeniukink@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
scapy = "2.4.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip = 'venv,env'
src_paths = []


[tool.black]
target-version = ['py39']
line-length = 120
exclude = '''
(
    \.venv
    \venv
    \env
)
'''

